examples/test/testpolicy8475.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8475
  namespace: namespace7
spec:
  podSelector:
    matchLabels:
      key1: value9
      key19: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value2
          key7: value0
      podSelector:
        matchLabels:
          key7: value26
          key0: value9
          key29: value24
